alignment fix

--- a/public/home.css
+++ b/public/home.css
@@ -13,7 +13,7 @@ body {
 
 h1 {
     font-size: 3rem;
-    margin-bottom: 1rem;
+    margin-bottom: 0.25rem;
 }
 
 .button {
@@ -80,4 +80,6 @@ nav {
 
 #mainLogin {
     align-items: center;
+    flex-direction: column;
+    display: flex;
 }
